# demki

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  _clang-format  conanfile.py  configure_linux_default.sh  configure_windows_default.bat  main.cpp
cmake_utils/: glslc.cmake  project.cmake
dummy/: CMakeLists.txt  dummy.cpp  dummy.hpp  main.cpp
engine/: CMakeLists.txt  abstract_application.cpp  abstract_application.hpp  graphical_application.cpp  graphical_application.hpp  qt_application.cpp  qt_application.hpp
examples/blank/: CMakeLists.txt
examples/cubic/: CMakeLists.txt  cubic.cpp  cubic.hpp  main.cpp
examples/dummy/: CMakeLists.txt  dummy.cpp  dummy.hpp  main.cpp
examples/particles/: CMakeLists.txt  main.cpp  particles_application.cpp  particles_application.hpp
examples/tetris/: CMakeLists.txt  field.cpp  field.hpp  figure.cpp  figure.hpp  main.cpp  tetris.cpp  tetris.hpp
particles/: CMakeLists.txt  main.cpp  particles.cpp  particles.hpp  particles_application.cpp  particles_application.hpp
particles/shaders/: shader.comp  shader.frag  shader.vert
renderer/: CMakeLists.txt  Creators.hpp  GraphicalApplication.cpp  GraphicalApplication.hpp  Utils.hpp  assert.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  command.cpp  command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  create_info.cpp  creators.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptor_set_layout.hpp  device.cpp  device.hpp  framebuffer.cpp  framebuffer.hpp  graphical_application.cpp  graphical_application.hpp  graphics_context.cpp  handle.hpp  handle_base.hpp  icompute_pipeline.hpp  icompute_target.hpp  icomputer.hpp  igraphics_context.hpp  igraphics_pipeline.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  (+48 more)
renderer/docs/: uniform.puml
renderer/include/: camera.hpp  icompute_pipeline.hpp  icompute_target.hpp  icomputer.hpp  igraphics_context.hpp  igraphics_pipeline.hpp  imodel.hpp  iopengl_surface.hpp  ioperation_target.hpp  ipipeline.hpp  irender_target.hpp  irenderable.hpp  irenderer.hpp  ishader_interface.hpp  ishader_interface_handle.hpp  istorage_buffer.hpp  isurface.hpp  iswapchain.hpp  itexture.hpp  ivulkan_surface.hpp  particles.hpp  renderable.hpp  types.hpp
renderer/ogl/: compute_pipeline.cpp  compute_pipeline.hpp  computer.cpp  computer.hpp  graphics_context.cpp  graphics_context.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  ispecific_operation_target.hpp  model.cpp  model.hpp  operation_context.cpp  operation_context.hpp  pipeline.cpp  pipeline.hpp  render_context.cpp  render_context.hpp  renderer.cpp  renderer.hpp  shader_interface_handle.hpp  storage_buffer.cpp  storage_buffer.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  uniform_handle.hpp  utils.hpp
renderer/vk/: buffer.cpp  buffer.hpp  buffer_shader_resource.cpp  buffer_shader_resource.hpp  command.cpp  command.hpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  compute_pipeline.cpp  compute_pipeline.hpp  compute_target.hpp  computer.cpp  computer.hpp  creators.hpp  debug_utils_messenger.cpp  debug_utils_messenger.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set_layout.cpp  descriptor_set_provider.cpp  descriptor_set_provider.hpp  device.cpp  device.hpp  fence.cpp  fence.hpp  graphical_application.cpp  graphical_application.hpp  graphics_context.cpp  graphics_context.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  handle.hpp  image.cpp  image.hpp  image_view.cpp  ioperation_target.hpp  ispecific_operation_target.hpp  memory.hpp  model.cpp  (+46 more)
renderer/vk/handles/: allocator.hpp  buffer.cpp  buffer.hpp  command.cpp  command.hpp  command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  compute_pipeline.cpp  compute_pipeline.hpp  creators.hpp  debug_utils_messenger.cpp  debug_utils_messenger.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set.cpp  descriptor_set.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  device.cpp  device.hpp  fence.cpp  fence.hpp  framebuffer.cpp  framebuffer.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  handle.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  instance.cpp  instance.hpp  memory.cpp  memory.hpp  physical_device.cpp  physical_device.hpp  pipeline.cpp  (+18 more)
resources/: CMakeLists.txt  iresource.hpp  iresources.hpp  resources.cpp  resources.hpp
scripts/: generate_compile_shaders.py
shaders/: compile_shaders.sh  shader.frag  shader.vert
shell/: CMakeLists.txt  iopengl_window.hpp  ivulkan_window.hpp  iwindow.hpp
shell/glfw/: opengl_window.cpp  opengl_window.hpp  vulkan_window.cpp  vulkan_window.hpp  window.cpp  window.hpp
shell/qt/: opengl_window.cpp  opengl_window.hpp  vulkan_window.cpp  vulkan_window.hpp  window.cpp  window.hpp
shell/qt/widget/: opengl_widget.cpp  opengl_widget.hpp  vulkan_widget.cpp  vulkan_widget.hpp  widget.cpp  widget.hpp
shell/qt/window/: opengl_window.cpp  vulkan_window.cpp  vulkan_window.hpp  window.cpp  window.hpp
tetris/: CMakeLists.txt  field.cpp  field.hpp  figure.cpp  figure.hpp  main.cpp  position.hpp  tetris.cpp  tetris.hpp
textures/: textures
utils/: CMakeLists.txt  hierarchy.hpp  type_list.hpp
