declare_project()

add_library(${PROJECT_NAME} STATIC
	ogl/operation_context.hpp
	ogl/operation_context.cpp
	ogl/shader_interface_handle.hpp
    vk/handles/buffer.hpp
    vk/handles/buffer.cpp
    vk/handles/command.hpp
    vk/handles/command.cpp
    vk/handles/command_buffer.hpp
    vk/handles/command_buffer.cpp
    vk/handles/command_pool.hpp
	vk/handles/command_pool.cpp
	vk/handles/compute_pipeline.hpp
	vk/handles/compute_pipeline.cpp
    vk/handles/debug_utils_messenger.hpp
    vk/handles/debug_utils_messenger.cpp
    vk/handles/descriptor_set.hpp
    vk/handles/descriptor_set.cpp
    vk/handles/descriptor_set_layout.hpp
    vk/handles/descriptor_set_layout.cpp
    vk/handles/descriptor_pool.hpp
    vk/handles/descriptor_pool.cpp
    vk/handles/device.hpp
    vk/handles/device.cpp
    vk/handles/fence.hpp
	vk/handles/fence.cpp
    vk/handles/framebuffer.cpp
    vk/handles/framebuffer.hpp
    vk/handles/graphics_pipeline.hpp
    vk/handles/graphics_pipeline.cpp
    vk/handles/handle.hpp
    vk/handles/image.hpp
    vk/handles/image.cpp
    vk/handles/image_view.hpp
    vk/handles/image_view.cpp
    vk/handles/instance.hpp
    vk/handles/instance.cpp
    vk/handles/memory.hpp
    vk/handles/memory.cpp
	vk/handles/pipeline.hpp
	vk/handles/pipeline.cpp
	vk/handles/pipeline_layout.hpp
    vk/handles/pipeline_layout.cpp
    vk/handles/physical_device.hpp
    vk/handles/physical_device.cpp
    vk/handles/simemory_accessor.hpp
    vk/handles/queue.hpp
    vk/handles/queue.cpp
    vk/handles/render_pass.hpp
    vk/handles/render_pass.cpp
    vk/handles/sampler.hpp
    vk/handles/sampler.cpp
    vk/handles/semaphore.hpp
    vk/handles/semaphore.cpp
    vk/handles/shader_module.hpp
    vk/handles/shader_module.cpp
    vk/handles/surface.hpp
    vk/handles/surface.cpp
    vk/handles/swapchain.hpp
    vk/handles/swapchain.cpp
    vk/graphics_context.hpp
    vk/graphics_context.cpp
    vk/model.hpp
    vk/model.cpp
	vk/computer.hpp
	vk/computer.cpp
	vk/compute_pipeline.hpp
	vk/compute_pipeline.cpp
	vk/compute_target.hpp
	vk/graphics_pipeline.hpp
	vk/graphics_pipeline.cpp
	vk/pipeline.hpp
	vk/pipeline.cpp
    vk/render_target.hpp
    vk/renderer.hpp
    vk/renderer.cpp
	vk/operation_context.hpp
	vk/operation_context.cpp
    vk/resource_manager.hpp
    vk/resource_manager.cpp
	vk/storage_buffer.hpp
	vk/storage_buffer.cpp
    vk/swapchain.hpp
    vk/swapchain.cpp
    vk/texture.hpp
    vk/texture.cpp
	vk/types.hpp
	vk/shader_resource.hpp
	vk/shader_resource.cpp
	vk/shader_interface_handle.hpp
	vk/shader_interface_handle.cpp
	vk/buffer_shader_resource.hpp
	vk/buffer_shader_resource.cpp
    vk/utils.hpp
    assert.hpp
	camera.hpp
	camera.cpp
    graphical_application.hpp
    graphical_application.cpp
	icomputer.hpp
	igraphics_context.hpp
	igraphics_pipeline.hpp
    imodel.hpp
    ipipeline.hpp
    irenderable.hpp
    irenderer.hpp
	irender_target.hpp
	istorage_buffer.hpp
	icompute_pipeline.hpp
	icompute_target.hpp
    iresource.hpp
    iresource_manager.hpp
    iswapchain.hpp
    itexture.hpp
	ishader_interface_handle.hpp
	particles.hpp
	particles.cpp
    renderable.hpp
    renderable.cpp
    renderable_pack.hpp
    renderable_pack.cpp
	operation_context.hpp
	storage_buffer_value.hpp
    types.hpp
    update_timer.hpp
    utils.hpp
	shader_interface.hpp
	shader_interface.cpp
    uniform_value.hpp
    vertex.hpp
    window.hpp
    window.cpp
)

target_include_directories(${PROJECT_NAME} PUBLIC .)
